--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html>
 	<head>
+        <!--Import Google Icon Font-->
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!--Import materialize.css-->
+		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.css') }}" media="screen,projection"/>
+
+		<!--Import jQuery before materialize.js-->
+		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-2.2.0.js') }}"></script>
+		<!--Import materialize.js-->
+		<script type="text/javascript" src="{{ url_for('static', filename='js/materialize.js') }}"></script>
+
+		<!--Let browser know website is optimized for mobile-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        
         <!--Setup page title-->
         <title>UOS UDC</title>
 	</head>
