--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.css') }}" media="screen,projection"/>
+		<!--Import My styles.css-->
+		<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"/>
 
 		<!--Import jQuery before materialize.js-->
 		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery-2.2.0.js') }}"></script>
@@ -13,12 +15,66 @@
 
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        
-        <!--Setup page title-->
+
+        <!--Setup page title and icon-->
+        <link href="{{ url_for('static', filename='img/uos_icon.png') }}" type="image/png" rel="shortcut icon" />
         <title>UOS UDC</title>
 	</head>
 
 	<body>
-        <h2>Welcome to the new UOS UDC!</h2>
+        <!--Page header start-->
+        <div class="header deep-purple lighten-2">
+            <div class="container">
+                <!--Main row in the header-->
+                <div class="row">
+                    <!--Column containing UOS logo-->
+                    <div class="col s12 m4">
+                        <a id="logo-container" herf="http://www.sharjah.ac.ae/" class="brand-logo">
+                            <object type="image/svg+xml" data="{{ url_for('static', filename='img/uos_logo.svg') }}"></object>
+                        </a>
+                    </div>
+                </div>
+                <!--Just for a bit of space-->
+                <div class="row"></div>
+            </div>
+        </div><!--Page header end-->
+        <!--Welcome login form section-->
+        
+        <div class="container">
+            <div class="row">
+                <div class="col l6 offset-l3 m8 offset-m2 s12">
+                    <!--Login card start-->
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="row" id="login-card">
+                                <!--Login form start-->
+                                <form class="col s12" method="post">
+                                    <div class="row">
+                                        <h5 class="col s12">Welcome to the New UDC!</h5>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input id="sid" name="sid" type="text" value="{{request.form.sid}}" class="validate">
+                                            <label for="sid">Username</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input id="pin" name="pin" type="password" value="{{request.form.pin}}" class="validate">
+                                            <label for="pin">Password</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col s12">
+                                            <button type="submit" name="login" value="done" class="waves-effect waves-light btn-large green col s12">login</button>
+                                        </div>
+                                    </div>
+                                </form><!--Login form end-->
+                            </div>
+                        </div>
+                    </div><!--Login card end-->
+                </div>
+            </div>
+        </div><!--Container end-->
     </body>
 </html>
