First step for data getting logic

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <!--Hidden Structures start-->
             <!--Side Navigation bar start-->
             <ul id="side-bar" class="side-nav blue-grey darken-4">
-                <li><a href="#login-dialog" class="modal-trigger light-green-text text-darken-2">LOGIN</a></li>
-                <li><a href="/general/" class="blue-grey-text text-lighten-5">GENERAL</a></li>
-                <li><a href="/about/" class="blue-grey-text text-lighten-5">ABOUT</a></li>
+                <li><a href="#login-dialog" class="modal-trigger light-green-text text-darken-2"><i class="material-icons">launch</i>LOGIN</a></li>
+                <li><a href="/general/" class="blue-grey-text text-lighten-5"><i class="material-icons">description</i>GENERAL</a></li>
+                <li><a href="/about/" class="blue-grey-text text-lighten-5"><i class="material-icons">info</i>ABOUT</a></li>
             </ul><!--Side Navigation bar end-->
 
             <!--Login form dialog Structure -->
@@ -58,7 +58,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <input id="sid" name="sid" type="text" value="{{request.form.sid}}" class="validate">
-                        <label for="sid">Username</label>
+                        <label for="sid">Student ID</label>
                     </div>
                 </div>
                 <div class="row">
