Many tweaks and improvements

--- a/static/index.html
+++ b/static/index.html
@@ -8,13 +8,13 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input id="sid" name="sid" type="text" value="{{request.form.sid}}" class="validate">
+                <input id="sid" name="sid" type="text" value="{{request.form.sid}}" required>
                 <label for="sid">Student ID</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input id="pin" name="pin" type="password" value="{{request.form.pin}}" class="validate">
+                <input id="pin" name="pin" type="password" value="{{request.form.pin}}" required>
                 <label for="pin">Password</label>
             </div>
         </div>
