--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block title %}Dashboard - {% endblock %}
+
 {% block body %}
     <div class="container">
         <p>{{data}}</p>
