--- a/static/layout.html
+++ b/static/layout.html
@@ -30,6 +30,7 @@
                 <a href="http://uosudc.tk" class="brand-logo">
                     <object type="image/svg+xml" data="{{ url_for('static', filename='img/uos_logo.svg') }}">Logo</object>
                     <span class="light-green-text text-darken-2"><b class="blue-grey-text text-darken-4">UOS</b> UDC</span>
+                    <div id="beta">Beta!</div>
                 </a>
                 <ul class="right hide-on-med-and-down">
                     {% if 'sid' in session %}
