--- a/static/layout.html
+++ b/static/layout.html
@@ -32,12 +32,12 @@
                     <span class="light-green-text text-darken-2"><b class="blue-grey-text text-darken-4">UOS</b> UDC</span>
                 </a>
                 <ul class="right hide-on-med-and-down">
-                    {% if 'sid' in session %}
+                    {% if 'name' in session %}
                         <li><a href="{{ url_for('dashboard') }}" class="light-green-text text-darken-2">Dashboard</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('general') }}" class="blue-grey-text text-darken-4">General</a></li>
                     <li><a href="{{ url_for('about') }}" class="blue-grey-text text-darken-4">About</a></li>
-                    {% if 'sid' in session %}
+                    {% if 'name' in session %}
                         <li><a href="{{ url_for('logout') }}" class="blue-grey-text text-darken-4">Logout</a></li>
                     {% else %}
                         <li><a id="login" onclick="$('#login-dialog').openModal({opacity: 0.1})" class="light-green-text text-darken-2">Login</a></li>
@@ -51,14 +51,14 @@
 
         <!--Side Navigation bar start-->
         <ul id="side-bar" class="side-nav blue-grey darken-4">
-            {% if 'sid' in session %}
+            {% if 'name' in session %}
                 <li><a href="{{ url_for('dashboard') }}" class="light-green-text text-darken-2"><i class="fa fa-tachometer"></i>DASHBOARD</a></li>
             {% else %}
                 <li><a href="#" onclick="login.click()" class="light-green-text text-darken-2"><i class="fa fa-sign-in"></i>LOGIN</a></li>
             {% endif %}
             <li><a href="{{ url_for('general') }}" class="blue-grey-text text-lighten-5"><i class="fa fa-database"></i>GENERAL</a></li>
             <li><a href="{{ url_for('about') }}" class="blue-grey-text text-lighten-5"><i class="fa fa-info-circle"></i>ABOUT</a></li>
-            {% if 'sid' in session %}
+            {% if 'name' in session %}
                 <li><a href="{{ url_for('logout') }}" class="blue-grey-text text-lighten-5"><i class="fa fa-sign-out"></i>LOGOUT</a></li>
             {% endif %}
         </ul><!--Side Navigation bar end-->
