--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -9,23 +9,34 @@
 
 {% block body %}
     <div class="container">
-        <div class="row"></div>
+        <div class="row hide-on-small-only"></div>
         <div class="row" id="card">
             <div class="col s12">
                 <div class="card-panel">
                     
-                    <div class="day hhead"></div>
+                    <div class="day hhead green lighten-5"></div>
                     <div class="day"></div>
                     <div class="day"></div>
                     <div class="day"></div>
                     <div class="day"></div>
                     
-                    <div class="days-head"></div>
-                    {% if student %}
-                        {% set schedule = student.get_schedule() %}
-                        {% set height = student.hour_length(5) %}
-                        {% for count in student.hour_count_array() %}
-                            <div class="hour" style="height: {{count * height}}%"></div>
+                    <div class="days-head green lighten-5"></div>
+                    {% if interface %}
+                        {% set schedule = interface.get_schedule() %}
+                        {% set height = interface.get_hour_length(5) %}
+                        {% set labels = interface.get_hours_labels() %}
+                        {% set index = 0 %}
+                        {% set count = 0 %}
+                        {% for fraction in interface.get_hours_array() %}
+                            {% set count = count + fraction %}
+                            <div class="hour-label blue-grey-text" style="top: {{2 + count * height}}%">{{labels[index][0]}}<span class="hide-on-med-and-down">{{labels[index][1]}}</span></div>
+                            {% if fraction == 1 %}
+                                <div class="hour" style="height: {{height / 2}}%; border-bottom: 1px solid #eceff1;"></div>
+                                <div class="hour" style="height: {{height / 2}}%"></div>
+                            {% else %}
+                                <div class="hour" style="height: {{fraction * height}}%"></div>
+                            {% endif %}
+                            {% set index = index + 1 %}
                         {% endfor %}
                         {% set colors = ["red", "teal", "green", "orange", "purple", "light-blue", "teal", "yellow", "deep-orange", "blue"] %}
                         {% set count = 0 %}
@@ -33,8 +44,8 @@
                             {% if key != "Error!" %}
                                 {% for left, top in course.coordinates(19, height, 5, 5) %}
                                     <div class="class {{colors[count]}}"
-                                         style="width: calc(19% - 1px); height: {{course.length()*height}}%; left: {{left}}%; top: {{top}}%">
-                                        <span class="course-name">{{course.name}}</span><br>
+                                         style="width: calc(19% - 1px); height: {{course.length() * height}}%; left: {{left}}%; top: {{top}}%">
+                                        <span class="course-name">{{course.short_name}}</span><br>
                                         <i class="fa fa-user fa-fw"></i> {{course.prof_name}}<br>
                                         <i class="fa fa-map-marker fa-fw"></i> {{course.location[0]}} {{course.location[1]}}
                                     </div>
@@ -44,9 +55,9 @@
                         {% endfor %}
                     {% endif %}
                     {% set days = ["Sun", "Mon", "Tue", "Wed", "Thu"] %}
-                    {% set dates = student.get_dates() %}
+                    {% set dates = interface.get_dates() %}
                     {% for count in range(0, 5) %}
-                        <div class="day-label blue-grey-text text-darken-2" style="left: {{5 + count*19}}%">{{days[count]}} {{dates[count]}}</div>
+                        <div class="day-label blue-grey-text text-darken-2" style="left: {{5 + count * 19}}%">{{days[count]}} <span class="hide-on-small-only">{{dates[count]}}</span></div>
                     {% endfor %}
                 </div>
             </div>
