--- a/static/layout.html
+++ b/static/layout.html
@@ -69,9 +69,29 @@
             <script>Materialize.toast({{ message|tojson }}, 5000)</script>
         {% endfor %}
         <!--Flash messages logic end-->
-        
+
         <!--Main Body start-->
         {% block body %}{% endblock %}
         <!--Main Body end-->
+
+        <!--Google Analytics code start-->
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || [])
+                    .push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-74667331-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <!--Google Analytics code end-->
     </body>
 </html>
