--- a/static/layout.html
+++ b/static/layout.html
@@ -75,23 +75,7 @@
         <!--Main Body end-->
 
         <!--Google Analytics code start-->
-        <script>
-            (function(i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function() {
-                    (i[r].q = i[r].q || [])
-                    .push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-            ga('create', 'UA-74667331-1', 'auto');
-            ga('send', 'pageview');
-        </script>
+        {% include 'ganalytics.html' %}
         <!--Google Analytics code end-->
     </body>
 </html>
