--- a/static/layout.html
+++ b/static/layout.html
@@ -15,6 +15,10 @@
 		<script type="text/javascript" src="{{ url_for('static', filename='js/materialize.js') }}"></script>
 		<!--Import My scripts.js-->
 		<script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+        <!--Import angular.min.js-->
+		<script type="text/javascript" src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
+		<!--Import My app.js-->
+		<script type="text/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
