--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -10,68 +10,53 @@
 {% block body %}
     <div class="container">
         <div class="row hide-on-small-only"></div>
-        <div class="row" id="card">
-            <div class="col s12">
-                <div class="card-panel">
-                    
-                    <div class="day hhead green lighten-5"></div>
-                    <div class="day"></div>
-                    <div class="day"></div>
-                    <div class="day"></div>
-                    <div class="day"></div>
-                    
-                    <div class="days-head green lighten-5"></div>
-                    {% if interface %}
-                        <!--201520, 201510, 201420, 201410-->
-                        {% set schedule = interface.get_schedule() %}
-                        {% set height = interface.get_hour_length(5) %}
-                        {% set labels = interface.get_hours_labels() %}
-                        {% set index = 0 %}
-                        {% set count = 0 %}
-                        {% for fraction in interface.get_hours_array() %}
-                            {% set count = count + fraction %}
-                                {% if labels %}
-                                    <div class="hour-label blue-grey-text" style="top: {{2 + count * height}}%">
-                                        {{labels[index][0]}}<span class="hide-on-med-and-down">{{labels[index][1]}}</span>
-                                    </div>
-                                {% endif %}
-                            {% if fraction == 1 %}
-                                <div class="hour" style="height: {{height / 2}}%; border-bottom: 1px solid #eceff1;"></div>
-                                <div class="hour" style="height: {{height / 2}}%"></div>
-                            {% else %}
-                                <div class="hour" style="height: {{fraction * height}}%"></div>
-                            {% endif %}
-                            {% set index = index + 1 %}
-                        {% endfor %}
-                        {% set colors = ["red", "teal", "green", "orange", "purple", "light-blue", "teal", "yellow", "deep-orange", "blue"] %}
-                        {% set count = 0 %}
-                        {% macro draw(course) %}
-                            {% for left, top in course.coordinates(19, height, 5, 5) %}
-                                <div class="class {{colors[count]}}"
-                                     style="width: calc(19% - 1px); height: {{course.length() * height}}%; left: {{left}}%; top: {{top}}%">
-                                    <span class="course-name">{{course.short_name}}</span><br>
-                                    <i class="fa fa-user fa-fw"></i> {{course.prof_name}}<br>
-                                    <i class="fa fa-map-marker fa-fw"></i> {{course.location[0]}} {{course.location[1]}}
-                                </div>
-                            {% endfor %}
-                        {% endmacro %}
-                        {% for key, course in schedule.iteritems() %}
-                            {% if key != "Error!" %}
-                                {{ draw(course) }}
-                                {% if course.lab %}
-                                    {{ draw(course.lab) }}
-                                {% endif %}
-                            {% endif  %}
-                            {% set count = count + 1 %}
-                        {% endfor %}
-                        {% set days = ["Sun", "Mon", "Tue", "Wed", "Thu"] %}
-                        {% set dates = interface.get_dates() %}
-                        {% for count in range(0, 5) %}
-                            <div class="day-label blue-grey-text text-darken-2" style="left: {{5 + count * 19}}%">
-                                {{days[count]}} <span class="hide-on-small-only">{{dates[count]}}</span>
-                            </div>
-                        {% endfor %}
-                    {% endif %}
+        <div class="row" id="dashboard">
+            <div class="col l4 m6 s12">
+                <div class="card-panel shadow blue darken-2" onclick="location.href='{{ url_for('schedule.index') }}'">
+                    <div class="row valign-wrapper">
+                        <i class="fa fa-fw fa-calendar" aria-hidden="true"></i>
+                        <h4>My Schedule</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col l4 m6 s12">
+                <div class="card-panel shadow red darken-2" onclick="location.href='/email'">
+                    <div class="row valign-wrapper">
+                        <i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>
+                        <h4>My Email</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col l4 m6 s12">
+                <div class="card-panel shadow teal darken-2" onclick="location.href='/balance'">
+                    <div class="row valign-wrapper">
+                        <i class="fa fa-fw fa-credit-card" aria-hidden="true"></i>
+                        <h4>My Balance</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col l4 m6 s12">
+                <div class="card-panel shadow green darken-2" onclick="location.href='/grades'">
+                    <div class="row valign-wrapper">
+                        <i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i>
+                        <h4>My Grades</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col l4 m6 s12">
+                <div class="card-panel shadow orange darken-2" onclick="location.href='/friends'">
+                    <div class="row valign-wrapper">
+                        <i class="fa fa-fw fa-users" aria-hidden="true"></i>
+                        <h4>My Friends</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col l4 m6 s12">
+                <div class="card-panel shadow purple darken-2" onclick="location.href='/blackboard'">
+                    <div class="row valign-wrapper">
+                        <i class="fa fa-fw fa-pencil-square-o" aria-hidden="true"></i>
+                        <h4>My BlackBoard</h4>
+                    </div>
                 </div>
             </div>
         </div>
